# pysquare

./: .gitignore  LICENSE  README.md  comments.txt  pyproject.toml
src/: __init__.py
src/pysquare/shapes/: __init__.py  base.py  circle.py  triangle.py
tests/: test_shapes.py
