[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysquare"
version = "0.0.1"
description = "Небольшой модуль Python для работы с числовыми свойствами геометрических фигур."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Иван Иванов", email = "ivan.evg.ivanov.dev@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["pysquare"]
default_section = "THIRDPARTY"

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = false